<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="25dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/container_card"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="300dp"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/flagship_card_title"
                android:text="@string/flagship_card_demo_title"
                style="@style/montserrat_semi_bold_22"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/flagship_card_venue"
                android:text="@string/flagship_card_demo_venue"
                style="@style/montserrat_semi_bold_14"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@id/flagship_card_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/flagship_card_time"
                android:text="@string/flagship_card_demo_time"
                style="@style/montserrat_semi_bold_14"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@id/flagship_card_venue"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/flagship_card_featured_image"
                android:src="@color/md_grey_700"
                android:scaleType="centerCrop"
                android:contentDescription="@string/flagship_card_featured_image"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@id/flagship_card_time"
                app:layout_constraintBottom_toBottomOf="@id/flagship_card_view_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="400dp"
                android:layout_height="400dp" />

            <Button
                android:id="@+id/flagship_card_view_btn"
                android:text="@string/flagship_cad_view_btn_label"
                style="@style/montserrat_semi_bold_14"
                android:textColor="@color/flagship_card_view_btn_text_color"
                android:background="@drawable/flagship_card_view_button_selector"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="130dp"
                android:layout_height="40dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>