<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/event_detail_layout_two"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EventDetailActivity">

    <include
        layout="@layout/app_bar"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/event_detail_layout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_main"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/event_detail_image_desc"
                android:scaleType="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="270dp" />

            <TableLayout
                android:id="@+id/score_container"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/image_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <TableRow
                    android:layout_height="36dp"
                    android:layout_width="match_parent">
                    <ImageView
                        android:layout_weight="1"
                        android:src="@drawable/one"
                        android:contentDescription="@string/event_detail_image_desc"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:layout_weight="1"
                        android:src="@drawable/two"
                        android:contentDescription="@string/event_detail_image_desc"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:layout_weight="1"
                        android:src="@drawable/three"
                        android:contentDescription="@string/event_detail_image_desc"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="8dp"
                    android:layout_height="36dp"
                    android:layout_width="match_parent">
                    <TextView
                        android:id="@+id/tv_score_one"
                        android:text="@string/demo_point"
                        style="@style/montserrat_semi_bold_16"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/tv_score_two"
                        android:text="@string/demo_point"
                        style="@style/montserrat_semi_bold_16"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/tv_score_three"
                        android:text="@string/demo_point"
                        style="@style/montserrat_semi_bold_16"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/tv_venue"
                android:text="LH - 1"
                style="@style/montserrat_semi_bold_16"
                android:textColor="@color/md_yellow_500"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toBottomOf="@id/score_container"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_time"
                android:text="11:00"
                style="@style/montserrat_semi_bold_16"
                android:textColor="@color/md_yellow_500"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@id/score_container"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_desc"
                style="@style/montserrat_medium_16"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_venue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_rules_label"
                android:text="@string/rules_and_regulations_label"
                style="@style/montserrat_medium_16"
                android:textColor="@color/md_yellow_500"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_rules_detail"
                style="@style/montserrat_medium_16"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_rules_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_contact"
                android:text="@string/contact_label"
                style="@style/montserrat_medium_16"
                android:textColor="@color/md_yellow_500"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_rules_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/contacts_linear_layout"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>